add unittest test xD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,4 @@ jobs:
       with:
         python-version: '3.10'
 
-    - run: ./ircserv
-    - run: python webserver.py
-    - run: python app.py
+    - run: python unit_test_split_msg.py
