--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,12 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Start Flask server
+      run: |
+        export FLASK_APP=webserver.py
+        flask run --host=0.0.0.0 &
+        sleep 10  # Wait for Flask server to start
     - name: Test with pytest
       run: |
-        pytest unit_test_split_msg.py
+        pytest tests/unit_test_split_msg.py
+        pytest tests/selenium_test.py
