--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,5 +41,5 @@ jobs:
         sleep 10  # Wait for Flask server to start
     - name: Test with pytest
       run: |
-        pytest tests/unit_test_split_msg.py
-        pytest tests/selenium_test.py
+        pytest ./tests/unit_test_split_msg.py
+        pytest ./tests/selenium_test.py
