--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         export FLASK_APP=webserver.py
         flask run --host=0.0.0.0 &
-        sleep 10  # Wait for Flask server to start
+        ./wait-for-it.sh localhost:5000 --timeout=60
         python ./tests/selenium_tests.py
     - name: Test with pytest
       run: |
