--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,13 +22,7 @@ jobs:
     - name: Install Google Chrome
       run: |
         sudo apt update
-        sudo apt install -y google-chrome-stable
-    - name: Install ChromeDriver
-      run: |
-        CHROME_VERSION=$(google-chrome --version | grep -oP '(?<=Google Chrome )[\d.]+')
-        wget -q -O /tmp/chromedriver.zip "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION/chromedriver_linux64.zip"
-        sudo unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
-        sudo chmod +x /usr/local/bin/chromedriver
+        sudo apt install -y google-chrome-stable chromium-chromedriver
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
