--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,41 +19,29 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest flask selenium
+        pip install flake8 pytest flask
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
+    - name: Ensure browsers are installed
+      run: python -m playwright install --with-deps
+
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      
-    - name: Install Firefox
-      run: |
-        sudo apt update
-        sudo apt install -y firefox
 
-    - name: Install GeckoDriver
-      run: |
-        GECKODRIVER_VERSION=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep tag_name | cut -d '"' -f 4)
-        wget "https://github.com/mozilla/geckodriver/releases/download/${GECKODRIVER_VERSION}/geckodriver-${GECKODRIVER_VERSION}-linux64.tar.gz" -O geckodriver.tar.gz
-        tar -xvzf geckodriver.tar.gz
-        chmod +x geckodriver
-        sudo mv geckodriver /usr/local/bin/
+    - name: Ensure browsers are installed
+      run: python -m playwright install --with-deps
 
-    - name: Start Flask server
-      run: |
-        export FLASK_APP=webserver.py
-        flask run --host=0.0.0.0 &
-        sleep 20
-        python ./tests/selenium_tests.py
     - name: Test with pytest
       run: |
         pytest ./tests/unit_test_split_msg.py
