--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest flask
+        pip install flake8 pytest flask playwright
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Ensure browsers are installed
