--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,3 +45,5 @@ jobs:
     - name: Test with pytest
       run: |
         pytest ./tests/unit_test_split_msg.py
+        python webserver.py
+        sleep 20
