--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,3 +47,4 @@ jobs:
         pytest ./tests/unit_test_split_msg.py
         python webserver.py
         sleep 20
+        pytest ./tests/selenium_tests.py
