--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest flask playwright
+        pip install flake8 pytest flask playwright asyncio websockets
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
     - name: Ensure browsers are installed
@@ -46,5 +46,6 @@ jobs:
       run: |
         pytest ./tests/unit_test_split_msg.py
         python webserver.py &
-        sleep 20
+        python app.py &
+        sleep 10
         pytest ./tests/selenium_tests.py
