--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -58,5 +58,5 @@ jobs:
     
     - name: run website test
       run: |
-        slepp 10
+        sleep 10
         pytest ./tests/selenium_tests.py
